text-decoration should not be propagated through absolutely positioned elements to <a> tags https://bugs.webkit.org/show_bug.cgi?id=86517

Source/WebCore:

Patch by Shane Stephens <shanestephens@google.com> on 2012-05-31
Reviewed by Darin Adler.

Test: fast/css/text-decoration-in-second-order-descendants.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::getTextDecorationColors):
Remove fix from 18611 as it doesn't work on second order descendants.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::adjustRenderStyle):
Add floating and positioned checks when deciding whether to avoid propagating text decoration. Move all checks into new method to improve readability.
(WebCore::doesNotInheritTextDecoration): Added

LayoutTests:

Added layout test to check no propagation of text-decoration to second-order descendants
(i.e. descendants of descendants), where the first-order descendant is positioned.

Tightened up existing descendants test to fail when text-decoration is incorrectly propagated
to first-order descendant.

Patch by Shane Stephens <shanestephens@google.com> on 2012-05-31
Reviewed by Darin Adler.

* fast/css/text-decoration-in-descendants-expected.html:
* fast/css/text-decoration-in-second-order-descendants-expected.html: Added.
* fast/css/text-decoration-in-second-order-descendants.html: Added.

Canonical link: https://commits.webkit.org/105763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119065 268f45cc-cd09-0410-ab3c-d52691b4dbfc